// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dots First matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    accessibilityRole="progressbar"
    accessibilityValue={
      {
        "max": 4,
        "min": 0,
        "now": 1,
      }
    }
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "center",
      }
    }
    testID="dots"
  >
    <View
      style={
        {
          "backgroundColor": "#1F7A4C",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "#D7E6DC",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "#D7E6DC",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "#D7E6DC",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "height": 8,
          "width": 8,
        }
      }
    />
  </View>
</RNCSafeAreaProvider>
`;

exports[`Dots Last matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    accessibilityRole="progressbar"
    accessibilityValue={
      {
        "max": 4,
        "min": 0,
        "now": 4,
      }
    }
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "center",
      }
    }
    testID="dots"
  >
    <View
      style={
        {
          "backgroundColor": "#D7E6DC",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "#D7E6DC",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "#D7E6DC",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "#1F7A4C",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "height": 8,
          "width": 8,
        }
      }
    />
  </View>
</RNCSafeAreaProvider>
`;

exports[`Dots Mid matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    accessibilityRole="progressbar"
    accessibilityValue={
      {
        "max": 4,
        "min": 0,
        "now": 2,
      }
    }
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "center",
      }
    }
    testID="dots"
  >
    <View
      style={
        {
          "backgroundColor": "#D7E6DC",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "#1F7A4C",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "#D7E6DC",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "#D7E6DC",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "height": 8,
          "width": 8,
        }
      }
    />
  </View>
</RNCSafeAreaProvider>
`;
